src/objects/Competitive_Analysis_Product__c.object
<CustomObject>
    <fields>
        <fullName>Competitive_Analysis_Request__c</fullName>
        <label>Competitive Analysis Request</label>
        <referenceTo>Competitive_Analysis_Request__c</referenceTo>
        <relationshipLabel>Competitive Analysis Products</relationshipLabel>
        <relationshipName>Competitive_Analysis_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Product</label>
        <referenceTo>Competitor_Product__c</referenceTo>
        <relationshipLabel>Competitive Analysis Products</relationshipLabel>
        <relationshipName>Competitive_Analysis_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competitive Analysis Products</relationshipLabel>
        <relationshipName>Competitive_Analysis_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competitive Analysis Product Association</label>
    <nameField>
        <displayFormat>CA_Prod_jn-{000}</displayFormat>
        <label>Competitive Analysis Product Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Analysis Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>